Updated to 1.19.3 + rewrote villager mixin